# MCPdemo1

mcpdemo/: app.py  auth.py  browser_mcp.json  main.py  pyproject.toml  requirements.txt  schema.py  tools.json
mcpdemo/FastApi/: weather.json
mcpdemo/servers/: client.py
